test/negative/501_assign_to_val.fx
// expect: immutable value
val x = 1
x = 2
println(x)
