test/negative/501_assign_to_val.err
501_assign_to_val.fx:3:1: error: the left side of an assignment is an immutable value

1 errors occured during type checking.
